--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-        <script src="ml5.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-    <script src="sketch.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-  </head>
-  <body>
-    <div class="mistake fixed" id="mistakes">
-      <span class="mistake-list"></span>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index-style.css">
+    <title>Posenet Virtual Yoga Trainer</title>
+</head>
+
+<body>
+    <div class="title">
+        <h1>
+            <span>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welcome to
+            </span>
+            <span>
+                <br>
+                Virtual Yoga Trainer
+            </span>
+        </h1>
     </div>
-  
+    <div class="button">
+        <a href="main.html" class="start-button">
+            <h2>Start</h2>
+        </a>
+    </div>
+    <div class="button">
+        <a href="instructions.html" class="start-button">
+            <h2>Instructions</h2>
+        </a>
+    </div>
+    <footer>
 
-</body></html>
+    </footer>
+</body>
+
+</html>
